--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -2,7 +2,26 @@
  * 定义font-icon的content，名字取style.less中class的名字。
  * 内容是由style.less自动生成的。
  */
+@font-icon-business-content-pencil:"\e69d";
+@font-icon-upload:"\e6a0";
+@font-icon-wrench:"\e69c";
+@font-icon-align-left-little:"\e690";
+@font-icon-arrow-corner-square:"\e691";
+@font-icon-eye-square:"\e692";
+@font-icon-idea-square:"\e693";
+@font-icon-line-chart-square:"\e694";
+@font-icon-pencil-circle:"\e695";
+@font-icon-pencil-square:"\e696";
+@font-icon-people:"\e697";
+@font-icon-plus-circle-square:"\e698";
+@font-icon-plus-shiled-square:"\e699";
+@font-icon-shield:"\e69a";
+@font-icon-word-square:"\e69b";
+@font-icon-fresh:"\e609";
 @font-icon-plus-square-full:"\e68e";
+@font-icon-star-half:"\e603";
+@font-icon-star-empty:"\e605";
+@font-icon-star-full:"\e604";
 @font-icon-chevron-down:"\e68a";
 @font-icon-chevron-left:"\e68b";
 @font-icon-chevron-right:"\e68c";
@@ -11,7 +30,7 @@
 @font-icon-align-left:"\e685";
 @font-icon-arrows-o-reverse:"\e686";
 @font-icon-arrow-top-left:"\e687";
-@font-icon-monitor:'\e688';
+@font-icon-monitor:"\e688";
 @font-icon-minus:"\e684";
 @font-icon-folder-empty:"\e683";
 @font-icon-business-content-empty:"\e644";
@@ -135,13 +154,10 @@
 @font-icon-collaps:"\e614";
 @font-icon-word:"\e601";
 @font-icon-trend:"\e602";
-@font-icon-star-half:"\e603";
-@font-icon-star-full:"\e604";
-@font-icon-star-empty:"\e605";
 @font-icon-signal:"\e606";
 @font-icon-search-square:"\e607";
 @font-icon-scale:"\e608";
-@font-icon-new:"\e609";
+@font-icon-new:"\e68f";
 @font-icon-list:"\e60a";
 @font-icon-clock:"\e60d";
 @font-icon-calculator:"\e60f";
