1) add new icons 2) move version to 0.0.6

--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -2,6 +2,21 @@
  * 定义font-icon的content，名字取style.less中class的名字。
  * 内容是由style.less自动生成的。
  */
+@font-icon-click:"\e6ab";
+@font-icon-fist:"\e6ac";
+@font-icon-cost:"\e6ad";
+@font-icon-average:"\e6a8";
+@font-icon-bad:"\e6a9";
+@font-icon-good:"\e6aa";
+@font-icon-hot:"\e6a7";
+@font-icon-bubble:"\e6a6";
+@font-icon-trophy:"\e6a1";
+@font-icon-stats:"\e6a2";
+@font-icon-numbered-list:"\e6a3";
+@font-icon-large-clock:"\e6a4";
+@font-icon-earth:"\e6a5";
+@font-icon-external-arrow:"\e69f";
+@font-icon-chain:"\e69e";
 @font-icon-business-content-pencil:"\e69d";
 @font-icon-upload:"\e6a0";
 @font-icon-wrench:"\e69c";
