fc-icon update 20150622

--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -2,6 +2,8 @@
  * 定义font-icon的content，名字取style.less中class的名字。
  * 内容是由style.less自动生成的。
  */
+@font-icon-transfer-square:"\e6b2";
+@font-icon-consult:"\e6b1";
 @font-icon-empty-praise2:"\e6af";
 @font-icon-praise2:"\e6b0";
 @font-icon-check-square2:"\e6ae";
